added css variables for styling

--- a/tlm-stencil/src/index.html
+++ b/tlm-stencil/src/index.html
@@ -20,7 +20,7 @@
     <section>
       <h2>Button</h2>
       <h3>Primary</h3>
-      <div style="display: flex; gap: 16px">
+      <!-- <div style="display: flex; gap: 16px">
         <mw-button test-id="test-button">BUTTON</mw-button>
         <mw-button test-id="test-button"><span slot="icon-start">🍔</span>BUTTON</mw-button>
         <mw-button test-id="test-button"><span slot="icon-end">🍔</span>BUTTON</mw-button>
@@ -33,7 +33,11 @@
         <mw-button test-id="test-button" secondary><span slot="icon-start">🍔</span>BUTTON</mw-button>
         <mw-button test-id="test-button" secondary><span slot="icon-end">🍔</span>BUTTON</mw-button>
         <mw-button test-id="test-button" secondary><span slot="icon-start">🍔</span><span slot="icon-end">🍔</span>BUTTON</mw-button>
-        <mw-button test-id="test-button" secondary disabled>BUTTON</mw-button>
+        <mw-button test-id="test-button" secondary disabled>BUTTON</mw-button> -->
+      <h2>Radio Button</h2>
+        <mw-radio-button name="transport">Car</mw-radio-button>
+        <mw-radio-button name="transport">Train</mw-radio-button>
+        <mw-radio-button checked disabled name="transport">Airplane</mw-radio-button>
       </div>
     </section>
   </body>
