added radio button to index.html

--- a/tlm-stencil/src/index.html
+++ b/tlm-stencil/src/index.html
@@ -41,6 +41,10 @@
         <mw-button label="LINK" href="https://maibornwolff.de" test-id="test-button-11"></mw-button>
         <mw-button label="LINK" href="https://maibornwolff.de" target="_blank" test-id="test-button-12" secondary></mw-button>
       </div>
+      <h2>Radio Button</h2>
+      <mw-radio-button name="transport">Car</mw-radio-button>
+      <mw-radio-button name="transport">Train</mw-radio-button>
+      <mw-radio-button checked disabled name="transport">Airplane</mw-radio-button>
     </section>
   </body>
 </html>
